Fix root cause container overflow.

--- a/src/Components/AbstractionContainer/RootCauseContainer/RootCauseContainer.scss
+++ b/src/Components/AbstractionContainer/RootCauseContainer/RootCauseContainer.scss
@@ -1,12 +1,16 @@
-.bottomContainer {
+.rootCauseContainer {
     width:100%;
-    height:200px;
+    height:100%;
     display:flex;
     border-top: solid 1px rgb(65, 65, 65);
     font-size:12px;
     color:white;
     display:flex;
     flex-direction: column;
+    overflow-y: auto;
+    scrollbar-gutter: stable;
+    scrollbar-color: #47474766 #252526;
+    scrollbar-width: thin;
 
     .title {
         font-size:13px;
